# actool

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
actool/: __main__.py  bom.py  car.py  catalog.py  compiler.py  deepmap2.py  icon_bundle.py  packer.py
docs/: atlas-packing.md  icon-bundle-parity.md  icon-shading-plan.md  icon-shading.md
src/: bom.rs  car.rs  catalog.rs  compiler.rs  deepmap2.rs  icon_bundle.rs  icon_effects.rs  icon_json.rs  icon_render.rs  lib.rs  main.rs  packer.rs  pdf_raster.rs  svg_raster.rs
tests/: dmp2_regressions.rs  e2e_compile.rs  helpers.py  icon_bundle_e2e.rs  ios_parity.rs  jpeg_regressions.rs  packing_regressions.rs  svg_parity.rs  test_car_structure.py  test_dmp2.py  test_inlk.py  test_regressions.py  tvos_parity.rs
tools/: compare_car.py  create_test_assets.py  deploy_target_test.py  probe_glass_relief.py  probe_layer_shadow.py  probe_margin_shadow.py  repos.json  validate_car.m  validate_repos.py
