[package]
name = "actool"
version = "2.2.4"
edition = "2021"
description = "Open reimplementation of Apple's actool for compiling xcassets and icons"
license = "MIT"

[[bin]]
name = "actool"
path = "src/main.rs"

[lib]
name = "actool"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
png = "0.18"
lzfse = "0.2"
flate2 = "1"
plist = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
byteorder = "1"
anyhow = "1"
thiserror = "2"
quick-xml = { version = "0.38", features = ["serialize"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
